# dcat

./: PROCEDURAL_EFFECTS.md  meson.build
scripts/: install_dizzcat.sh  install_dongcat.sh
shaders/: shader.frag  shader.vert
src/: main.c
src/core/: types.h
src/graphics/: animation.c  model.c  texture_loader.c
src/input/: input_handler.c  input_handler.h
src/renderer/: vk_memory.c  vk_memory.h  vulkan_renderer.c  vulkan_renderer.h
src/terminal/: kitty.c  kitty_shm.c  terminal.c  terminal.h
